src/objects/BGCK__Question_Type__c.object
<CustomObject>
    <fields>
        <fullName>BGCK__Checklist_Version__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Checklist Version</label>
        <referenceTo>BGCK__Checklist_Version__c</referenceTo>
        <relationshipLabel>Question Types</relationshipLabel>
        <relationshipName>Question_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGCK__Default_Value__c</fullName>
        <label>Default Value</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGCK__Fieldset_Name__c</fullName>
        <description>For Record List questions, the name of the fieldset to be used when the user is creating or editing records within the checklist.</description>
        <label>Fieldset Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGCK__Maximum_Length__c</fullName>
        <label>Maximum Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BGCK__Name_Number_Currency__c</fullName>
        <formula>IF( ISPICKVAL(BGCK__Type__c, &quot;Number - Currency&quot;), VALUE(Name), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name (Number - Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BGCK__Name_Number_Integer__c</fullName>
        <formula>IF( ISPICKVAL(BGCK__Type__c, &quot;Number - Integer&quot;), VALUE(Name), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name (Number - Integer)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BGCK__Name_Number_Percent__c</fullName>
        <formula>IF( ISPICKVAL(BGCK__Type__c, &quot;Number - Percent&quot;), VALUE(Name), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name (Number - Percent)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BGCK__Object_Name__c</fullName>
        <description>For Record List questions, the API name of the object to be listed</description>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGCK__Preview_Field_Count__c</fullName>
        <description>The number of fields out of the fieldset to show in the table view</description>
        <label>Preview Field Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BGCK__Track_No__c</fullName>
        <externalId>true</externalId>
        <label>Tracking Number</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BGCK__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Radio Button</fullName>
                </value>
                <value>
                    <fullName>Checkbox - Horizontal</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Checkbox - Vertical</fullName>
                </value>
                <value>
                    <fullName>Picklist</fullName>
                </value>
                <value>
                    <fullName>Number - Percent</fullName>
                </value>
                <value>
                    <fullName>Number - Integer</fullName>
                </value>
                <value>
                    <fullName>Number - Currency</fullName>
                </value>
                <value>
                    <fullName>Phone Number</fullName>
                </value>
                <value>
                    <fullName>Text Area</fullName>
                </value>
                <value>
                    <fullName>Label</fullName>
                </value>
                <value>
                    <fullName>Number - Decimal</fullName>
                </value>
                <value>
                    <fullName>Record List</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BGCK__hasChoices__c</fullName>
        <formula>IF( ISPICKVAL(BGCK__Type__c, &quot;Radio Button&quot;), true, (IF( ISPICKVAL(BGCK__Type__c, &quot;Picklist&quot;), true, (IF( ISPICKVAL(BGCK__Type__c, &quot;Checkbox - Horizontal&quot;), true, (IF( ISPICKVAL(BGCK__Type__c, &quot;Checkbox - Vertical&quot;), true, false)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Choices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID_of_Checklist_version__c</fullName>
        <formula>BGCK__Checklist_Version__r.External_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External ID of Checklist version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>WADOL_Mulesoft_Ext_Id__c</fullName>
        <externalId>true</externalId>
        <label>Mulesoft Ext Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Question Type</label>
    <nameField>
        <label>Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Question Types</pluralLabel>
    <recordTypes>
        <fullName>BGCK__Checkbox_Vertical</fullName>
        <active>false</active>
        <label>Checkbox - Vertical</label>
    </recordTypes>
    <recordTypes>
        <fullName>BGCK__Date</fullName>
        <active>false</active>
        <label>Date</label>
    </recordTypes>
    <recordTypes>
        <fullName>BGCK__Label</fullName>
        <active>false</active>
        <label>Label</label>
    </recordTypes>
    <recordTypes>
        <fullName>BGCK__Number_Currency</fullName>
        <active>false</active>
        <label>Number - Currency</label>
    </recordTypes>
    <recordTypes>
        <fullName>BGCK__Number_Decimal</fullName>
        <active>false</active>
        <label>Number - Decimal</label>
    </recordTypes>
    <recordTypes>
        <fullName>BGCK__Number_Percent</fullName>
        <active>false</active>
        <label>Number - Percent</label>
    </recordTypes>
    <recordTypes>
        <fullName>BGCK__Picklist</fullName>
        <active>false</active>
        <label>Picklist</label>
    </recordTypes>
    <recordTypes>
        <fullName>BGCK__Radio_Button</fullName>
        <active>false</active>
        <label>Radio Button</label>
    </recordTypes>
    <recordTypes>
        <fullName>BGCK__Text</fullName>
        <active>false</active>
        <label>Text</label>
    </recordTypes>
    <recordTypes>
        <fullName>BGCK__Text_Area</fullName>
        <active>true</active>
        <label>Text Area</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>